--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.23",
     "@tailwindcss/vite": "^4.0.0",
     "apexcharts": "^4.4.0",
+    "axios": "^1.7.9",
     "datatables.net-dt": "^2.2.1",
     "datatables.net-responsive-dt": "^3.0.3",
     "datatables.net-select-dt": "^3.0.0",
