--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.0",
+    "unocss": "^65.4.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0"
   }
