--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
     "d3": "^7.9.0",
+    "daisyui": "^5.0.43",
     "i18next-vue": "^5.2.0",
     "pinia": "^2.3.1",
     "vee-validate": "^4.15.0",
